Added a new blog post on this summer.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About
 permalink: /about/
 ---
-<div class="header header-filter" style="background-image: url('/assets/img/rodeo.jpg');">
+<div class="header header-filter" style="background-image: url('/assets/img/headers/rodeo.jpg');">
 </div>
 <div class="main main-raised">
   <div class="container">
