--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="header header-filter" style="background-image: url('/assets/img/header.jpg');"></div>
+<div class="header header-filter" style="background-image: url('/assets/img/headers/index.jpg');"></div>
 
 <div class="main main-raised">
   <div class="profile-content">
@@ -87,31 +87,9 @@ layout: default
                           </a>
                         </div>
                       </div>
+                      <hr>
+                      <p>I went to school at <a href="https://www.rose-hulman.edu" target="_blank">Rose-Hulman</a></p>
                     </div>
-                    <div class="row panel">
-                      <p>I got the best undergraduate engineering degree.</p>
-                      <div class="col-md-4 col-md-offset-4">
-                        <a href="https://www.rose-hulman.edu/">
-                          <img src="/assets/img/rh.png" class="img-responsive" />
-                        </a>
-                      </div>
-                    </div>
-                    {% comment %}
-                    <div class="row well">
-                      <p>Here are some of the places that I've been at in the past.</p>
-                      <br>
-                      <div class="col-md-4 col-md-offset-1">
-                        <a href="https://www.groupon.com">
-                          <img src="/assets/img/groupon.svg" class="img-responsive" />
-                        </a>
-                      </div>
-                      <div class="col-md-4 col-md-offset-2">
-                        <a href="https://www.rockwellcollins.com/">
-                          <img src="/assets/img/rockwellcollins.png" class="img-responsive" />
-                        </a>
-                      </div>
-                    </div>
-                    {% endcomment %}
                   </div>
                 </div>
                 <div class="tab-pane text-center" id="projects">
