Changed blog icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
               <ul class="nav nav-pills" role="tablist">
                 <li class="active">
                   <a href="#blog" role="tab" data-toggle="tab">
-                    <i class="material-icons">whatshot</i>
+                    <i class="material-icons">book</i>
                     Blog
                   </a>
                 </li>
